# rust_study

./: Cargo.toml  README.md
src/: main.rs
src/dining-philosophers/: main.rs
src/embed/: main.js  main.rs  package.json  pure.js
src/function/: main.rs
src/generics-traits/: main.rs
src/macros/: main.rs
